# awsom

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.local.md  COMMANDS.md  Cargo.toml  LICENSE  README.md  RELEASE.md  RELEASE_SETUP.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
scripts/: setup-dev.sh
src/: aws_config.rs  env.rs  error.rs  main.rs  models.rs  sso_config.rs
src/auth/: mod.rs  oidc.rs  token_cache.rs
src/cli/: mod.rs
src/cli/commands/: completions.rs  config.rs  console.rs  exec.rs  export.rs  import.rs  list.rs  login.rs  logout.rs  mod.rs  profile.rs  session.rs  status.rs
src/config/: mod.rs
src/console/: mod.rs
src/credentials/: cache.rs  fetcher.rs  mod.rs
src/expiry/: mod.rs
src/session/: mod.rs
src/ui/: app.rs  mod.rs
src/ui/screens/: mod.rs
src/ui/widgets/: mod.rs
